--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
         <h2 style="padding:20px">New Arrival</h2>
         <div class="new-arrival">
             <div class="new-arrival-container">
-                <img class="header-img" src="https://i.etsystatic.com/22279588/r/il/f8eb70/4735910802/il_570xN.4735910802_r16q.jpg">
+                <img class="home-img" src="https://i.etsystatic.com/22279588/r/il/f8eb70/4735910802/il_570xN.4735910802_r16q.jpg">
                 <button>Shop Now <i class="fa-solid fa-arrow-right"></i> </button>
             </div>
             <div class="new-arrival-container">
-                <img class="header-img" src="https://images.unsplash.com/photo-1589810635657-232948472d98?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                <img class="home-img" src="https://images.unsplash.com/photo-1589810635657-232948472d98?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                 <button>Shop Now <i class="fa-solid fa-arrow-right"></i> </button>
             </div>
             <div class="new-arrival-container">
-                <img class="header-img" src="https://www.hancockfashion.com/cdn/shop/files/14053Black_8.jpg?v=1734412115">
+                <img class="home-img" src="https://www.hancockfashion.com/cdn/shop/files/14053Black_8.jpg?v=1734412115">
                 <button>Shop Now <i class="fa-solid fa-arrow-right"></i> </button>
             </div>
             <div class="new-arrival-container">
-                <img class="header-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJDfC5oOkTKUuTZ-68I2L2d6TT6xTL4b9G9V5442roTX3YtqSDNaxSRI7H9cs-Iwk-t9k&usqp=CAU">
+                <img class="home-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJDfC5oOkTKUuTZ-68I2L2d6TT6xTL4b9G9V5442roTX3YtqSDNaxSRI7H9cs-Iwk-t9k&usqp=CAU">
                 <button>Shop Now <i class="fa-solid fa-arrow-right"></i> </button>
             </div>
         </div>
@@ -101,19 +101,19 @@
         <h2 style="padding:20px">Most Wanted</h2>
         <div class="new-arrival">
             <div class="new-arrival-container">
-                <img class="header-img" src="https://static.wixstatic.com/media/c7f060_39304e56f7af47cbae6765c7c716e8bd~mv2.jpeg/v1/fill/w_736,h_920,al_c,q_85,enc_avif,quality_auto/c7f060_39304e56f7af47cbae6765c7c716e8bd~mv2.jpeg">
+                <img class="home-img" src="https://static.wixstatic.com/media/c7f060_39304e56f7af47cbae6765c7c716e8bd~mv2.jpeg/v1/fill/w_736,h_920,al_c,q_85,enc_avif,quality_auto/c7f060_39304e56f7af47cbae6765c7c716e8bd~mv2.jpeg">
                 <button>Shop Now <i class="fa-solid fa-arrow-right"></i> </button>
             </div>
             <div class="new-arrival-container">
-                <img class="header-img" src="https://5.imimg.com/data5/ECOM/Default/2022/12/XQ/XJ/YR/52326283/anokherang-lkurtas-green-floral-printed-men-kurta-38440612069625.jpg">
+                <img class="home-img" src="https://5.imimg.com/data5/ECOM/Default/2022/12/XQ/XJ/YR/52326283/anokherang-lkurtas-green-floral-printed-men-kurta-38440612069625.jpg">
                 <button>Shop Now <i class="fa-solid fa-arrow-right"></i> </button>
             </div>
             <div class="new-arrival-container">
-                <img class="header-img" src="https://cdn.shopify.com/s/files/1/0682/3755/8034/files/8_kaftan_480x480.webp?v=1724779858">
+                <img class="home-img" src="https://cdn.shopify.com/s/files/1/0682/3755/8034/files/8_kaftan_480x480.webp?v=1724779858">
                 <button>Shop Now <i class="fa-solid fa-arrow-right"></i> </button>
             </div>
             <div class="new-arrival-container">
-                <img class="header-img" src="https://i.pinimg.com/1200x/d2/82/de/d282deb31306567b1b2fc040b341bf0a.jpg">
+                <img class="home-img" src="https://i.pinimg.com/1200x/d2/82/de/d282deb31306567b1b2fc040b341bf0a.jpg">
                 <button>Shop Now <i class="fa-solid fa-arrow-right"></i> </button>
             </div>
         </div>
